--- a/index.html
+++ b/index.html
@@ -13,7 +13,14 @@
         <div class="container">
             <nav>
                 <div>
-                    <a href="#">Экотуризм</a>
+                    <div class="drop_container">
+                        <div class="drop_btn">Экотуризм</div>
+                        <div class="drop">
+                            <p><a href="">Мероприятия</a></p>
+                            <p><a href="">Гостевые домики</a></p>
+                            <p><a href="">Развлечения</a></p>
+                        </div>
+                    </div>
                     <a href="#">Карта</a>
                     <a href="#">История</a>
                 </div>
